--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -4,42 +4,14 @@
 {% block content %}
 <div id="mainPage">
     <div class="admins">
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="{{ url_for('static', filename='media/images/koki.jpg') }}" alt="Avatar" style="width:200px;height:200px;">
-                </div>
-                <div class="flip-card-back">
-                    <h1>Ivan Kojic</h1>
-                    <p>Architect & Engineer</p>
-                    <p>We love that guy</p>
-                </div>
-            </div>
-        </div>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="{{ url_for('static', filename='media/images/ante.jpg') }}" alt="Avatar" style="width:200px;height:200px;">
-                </div>
-                <div class="flip-card-back">
-                    <h1>Ante Simunov</h1>
-                    <p>Architect & Engineer</p>
-                    <p>We love that guy</p>
-                </div>
-            </div>
-        </div>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="{{ url_for('static', filename='media/images/doki.jpg') }}" alt="Avatar" style="width:200px;height:200px;">
-                </div>
-                <div class="flip-card-back">
-                    <h1>Dorian Karuc</h1>
-                    <p>Architect & Engineer</p>
-                    <p>We love that guy</p>
-                </div>
-            </div>
-        </div>
+        <p class="aboutText">
+            Hello dudes and dudettes! <br>
+            We are Ante, Dorian and Ivan, creators of SoFtYTech site. 
+            From our early ages we have been following everything remotely related to PC and gaming world. 
+            In hope of helping you we will talk about tech news and our own positive and negative experiences.
+            <br>
+            Have fun and come back again.
+        </p>
     </div>
 
 </div>
