--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -8,7 +8,11 @@
     <meta name="description" content="This website is for Gaming and PC enthusiasts bringing you fresh news, reviews and etc.">
     <meta name="author" content="Ivan Kojic, Ante Simunov">
     <link rel="icon" href="{{ url_for('static', filename='css/images/SoFtYTechIcon.ico') }}" type="image/x-icon" />
-    <title>{% block title %}{% endblock %}</title>
+    {% if title %}
+    <title>Softy Tech | {{ title }}</title>
+    {% else %}
+    <title>Softy Tech</title>
+    {% endif %}
     <!--- Bootstrap CSS   
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> --->
     <!--- My CSS --->
