--- a/flaskblog/static/css/glavni.css
+++ b/flaskblog/static/css/glavni.css
@@ -1,6 +1,8 @@
 body {
+    background-color: black;
     background: linear-gradient(to bottom right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .5)), url(images/background.jpg) fixed;
     margin: 5px 0 5px 0;
+    display: none;
 }
 
 ::-webkit-scrollbar {
