--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -66,6 +66,12 @@
 
 
     {% include "includes/footer.html" %}
+
+    <script>
+        $(document).ready(function () {
+            $('body').fadeIn(800);
+        });
+    </script>
 </body>
 
 </html>
