--- a/flaskblog/static/css/header.css
+++ b/flaskblog/static/css/header.css
@@ -198,7 +198,7 @@
 
 @media only screen and (max-width: 600px) {
     #titleID h1 {
-        padding-top: 10px;
+        padding-top: 30px;
         font-size: 55px;
     }
 }
@@ -224,6 +224,7 @@
 
     #titleID h1 {
         font-size: 50px;
+        padding-top: 30px;
     }
 }
 
@@ -241,15 +242,21 @@
     }
 
     #titleID h1 {
+        padding-top: 40px;
         font-size: 40px;
     }
 }
 
 @media only screen and (max-width : 320px) {
     #titleID h1 {
-        padding-top: 25px;
+        padding-top: 50px;
         font-size: 40px;
         line-height: 1;
+    }
+}
+@media only screen and (max-width : 312px) {
+    #titleID h1 {
+        padding-top: 30px;
     }
 }
 
