--- a/flaskblog/static/css/header.css
+++ b/flaskblog/static/css/header.css
@@ -74,8 +74,9 @@
     color: #7FCCF7;
     border-top-color: white;
     border-top-style: solid;
-    border-top-width: 1px;   
+    border-top-width: 1px;
 }
+
 #loginBtn {
     cursor: pointer;
 }
@@ -94,12 +95,13 @@
     height: 200x;
     width: 250px;
     border-radius: 15px;
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71,71,71,.5);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71,71,71,.5);
-    box-shadow: 1px 3px 20px 0px rgba(71,71,71,.5);
+    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .5);
+    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
+    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
 }
+
 .userAccountMenu a {
-    display: block; 
+    display: block;
     margin-bottom: 30px;
     margin-top: 30px;
 }
@@ -254,6 +256,7 @@
         line-height: 1;
     }
 }
+
 @media only screen and (max-width : 312px) {
     #titleID h1 {
         padding-top: 30px;
