--- a/flaskblog/static/css/header.css
+++ b/flaskblog/static/css/header.css
@@ -86,7 +86,7 @@
     width: 50%;
     height: 50%;
     background-color: transparent;
-    border-top: solid 1px #7FCCF7;
+    border-top: solid 1px white;
     border-left: solid 1px #7FCCF7;
     position: absolute;
     top: 0;
@@ -99,7 +99,7 @@
     height: 50%;
     background-color: transparent;
     border-right: solid 1px #007bff;
-    border-bottom: solid 1px #007bff;
+    border-bottom: solid 1px white;
     position: absolute;
     bottom: 0;
     right: 0;
