--- a/flaskblog/static/css/header.css
+++ b/flaskblog/static/css/header.css
@@ -80,7 +80,6 @@
 
 }
 
-
 .menuBtn:hover::before {
     content: '';
     width: 50%;
@@ -92,6 +91,7 @@
     position: absolute;
     top: 0;
     left: 0;
+
 }
 
 .menuBtn:hover::after {
@@ -105,6 +105,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    
 }
 
 .userAccountMenu {
@@ -185,11 +186,10 @@
         top: 50px;
         background: rgba(0, 0, 0, .8);
         overflow: hidden;
-        max-height: 0;
+        min-height: 1000px;
         margin-right: -100%;
+        visibility: hidden;
     }
-
-
 
     .menu a {
         display: block;
@@ -213,9 +213,9 @@
     }
 
     .show {
-        max-height: 475px;
         margin-right: 0;
-        transition: 1s all;
+        transition: .5s all;
+        visibility: visible;
     }
 
     #titleID h1 {
@@ -237,18 +237,6 @@
         margin: 3px 0 0 5%;
     }
 
-
-    .menu {
-        height: 450px;
-    }
-
-    .menu a {
-        font-size: 20px;
-        width: 150px;
-        text-align: center;
-        margin: 15px auto;
-    }
-
     #titleID h1 {
         font-size: 50px;
         padding-top: 30px;
@@ -256,18 +244,6 @@
 }
 
 @media only screen and (max-width : 390px) {
-    .menu {
-        height: 250px;
-    }
-
-    .menu a {
-        font-size: 20px;
-        width: 150px;
-        text-align: center;
-        padding: 3px 10px 3px 10px;
-        margin: 10px auto;
-    }
-
     #titleID h1 {
         padding-top: 40px;
         font-size: 40px;
@@ -289,15 +265,6 @@
 }
 
 @media only screen and (max-width : 290px) {
-    .menu {
-        height: 240px;
-    }
-
-    .menu a {
-        width: 100px;
-        font-size: 15px;
-    }
-
     .btnH {
         font-size: 25px;
         width: 25px;
