--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -42,6 +42,13 @@
         crossorigin="anonymous"></script>
     <!--- My Scripts --->
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-4447542487593101",
+          enable_page_level_ads: true
+        });
+      </script>
 
     
 </head>
@@ -66,7 +73,6 @@
 
 
     {% include "includes/footer.html" %}
-
 </body>
 
 </html>
