--- a/flaskblog/templates/admin_Base.html
+++ b/flaskblog/templates/admin_Base.html
@@ -51,24 +51,14 @@
     </div>
 
     <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+        {% include "includes/messages.html" %}
+
         {% block content%}
         {% endblock %}
+
     </div>
+
     {% include "includes/admin_Footer.html" %}
-
-
-
-
-
 </body>
 
 </html>
