--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -55,20 +55,12 @@
 
 <body>
     {% include "includes/header.html" %}
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
+    {% include "includes/messages.html" %}
 
 
 
     {% block content %}
+    
     {% endblock %}
 
 
