--- a/flaskblog/templates/admin_addPost.html
+++ b/flaskblog/templates/admin_addPost.html
@@ -128,6 +128,7 @@
     CKEDITOR.replace( 'editor', {
         filebrowserImageUploadUrl: '/ckupload/',
         filebrowserUploadMethod: 'form',
+        // filebrowserBrowseUrl: '/filebrowser/'
     });
 </script>
 {% endblock %}
