--- a/flaskblog/templates/admin_Login.html
+++ b/flaskblog/templates/admin_Login.html
@@ -33,7 +33,7 @@
     <a href="{{ url_for('user.forgot_password') }}" id="registerButton">Reset Password</a>
     <br>
     <small>You don't have account?</small>
-    <a href="{{ url_for('register') }}" id="registerButton">Register</a>
+    <a href="{{ url_for('users.register') }}" id="registerButton">Register</a>
 </form>
 
 {% endblock %}
