--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -51,7 +51,7 @@
 
         {{ form.submit(class="registerButton") }}
         <small>You already have account?</small>
-        <a href="{{ url_for('login') }}" id="registerButton">LogIn</a>
+        <a href="{{ url_for('users.login') }}" id="registerButton">LogIn</a>
     </form>
 </div>
 {% endblock %}
