--- a/flaskblog/templates/admin_Home.html
+++ b/flaskblog/templates/admin_Home.html
@@ -27,8 +27,8 @@
         <td>{{post.language}}</td>-->
         <td>{{post.author}}</td>
         <td>{{post.date_posted}}</td>
-        <td><a href="{{ url_for('update_post', post_id=post.id) }}">Update</a></td>
-        <td><a href="{{ url_for('delete_post', post_id=post.id) }}">Delete</a></td>
+        <td><a href="{{ url_for('posts.update_post', post_id=post.id) }}">Update</a></td>
+        <td><a href="{{ url_for('posts.delete_post', post_id=post.id) }}">Delete</a></td>
     </tr>
     {% endfor %}
 </table>
