--- a/flaskblog/templates/includes/footer.html
+++ b/flaskblog/templates/includes/footer.html
@@ -19,8 +19,8 @@
     </div>
     -->
     <div class="footer-full">
-        <a href="{{ url_for('about') }}" class="footerBtn" id="aboutBtn">About</a>
-        <a href="{{ url_for('login') }}" class="footerBtn" id="creditsBtn">	&copyMPD</a>
-        <a href="{{ url_for('contact') }}" class="footerBtn" id="contactBtn">Contact</a>
+        <a href="{{ url_for('main.about') }}" class="footerBtn" id="aboutBtn">About</a>
+        <a href="{{ url_for('users.login') }}" class="footerBtn" id="creditsBtn">	&copyMPD</a>
+        <a href="{{ url_for('main.contact') }}" class="footerBtn" id="contactBtn">Contact</a>
     </div>
 </footer>
