--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/footer.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/glavni.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/test.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/sliderStyle.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/form.css') }}">
     <!--- FontAwesomeIcons CSS --->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -42,8 +43,9 @@
         crossorigin="anonymous"></script>
     <!--- My Scripts --->
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
+    <script>2
         (adsbygoogle = window.adsbygoogle || []).push({
           google_ad_client: "ca-pub-4447542487593101",
           enable_page_level_ads: true
