--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -99,6 +99,7 @@
 
     });
 </script>
+<script src="{{ url_for('static', filename='js/sliderJS.js') }}"></script>
 
 {% include "includes/topBtn.html" %}
 
