--- a/flaskblog/templates/includes/messages.html
+++ b/flaskblog/templates/includes/messages.html
@@ -1,9 +1,25 @@
 {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
+{% if messages %}
+{% for category, message in messages %}
+<div class="alert alert-{{ category }} alert-dismissible fade show" data-timeout="2000">
+    {{ message }}
+    <!-- <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button> -->
+</div>
+{% endfor %}
+{% endif %}
 {% endwith %}
+
+<script>
+    $(document).ready(function () {
+        // Find all elements with ".alert" class
+        $('.alert').each(function () {
+            var timeout = $(this).data('timeout'); // Read "data-timeout" attribute
+            var alert = $(this); // Store the alert element reference
+
+            // Use setTimeout to close the alert after the specified time
+            setTimeout(function () {
+                alert.alert('close'); // Close the alert using Bootstrap's close method
+            }, timeout);
+        });
+    });
+</script>
