--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Tech, SoFtY, Gaming, Blog, PC, News, Review, Games, GPU, CPU, RAM, nVidia, Intel, AMD, Gigabyte, MSI, Asus, Acer, Razer, Logitech, Roccat, R.A.T., Samsung, AsTech">
-    <meta name="description" content="This website is for Gaming and PC enthusiasts bringing you fresh news, reviews and etc.">
+    <meta name="keywords"
+        content="Tech, SoFtY, Gaming, Blog, PC, News, Review, Games, GPU, CPU, RAM, nVidia, Intel, AMD, Gigabyte, MSI, Asus, Acer, Razer, Logitech, Roccat, R.A.T., Samsung, AsTech">
+    <meta name="description"
+        content="This website is for Gaming and PC enthusiasts bringing you fresh news, reviews and etc.">
     <meta name="author" content="Ivan Kojic, Ante Simunov">
     <link rel="icon" href="{{ url_for('static', filename='css/images/SoFtYTechIcon.ico') }}" type="image/x-icon" />
     {% if title %}
@@ -15,6 +17,7 @@
     {% endif %}
     <!--- Bootstrap CSS   
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> --->
+
     <!--- My CSS --->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/header.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/footer.css') }}">
@@ -23,7 +26,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/form.css') }}">
     <!--- FontAwesomeIcons CSS --->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"> -->
     <!--- Google Font --->
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Orbitron" rel="stylesheet">
@@ -35,23 +38,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/emojionearea.css') }}">
     <script src="{{ url_for('static', filename='js/emojionearea.js') }}"></script>
     <!--- Popper Scripts --->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <!--- Bootstrap Scripts --->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <!--- My Scripts --->
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>2
-        (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-4447542487593101",
-          enable_page_level_ads: true
-        });
-      </script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-4447542487593101",
+                enable_page_level_ads: true
+            });
+    </script>
 
-    
+
 </head>
 
 <body>
@@ -61,7 +66,7 @@
 
 
     {% block content %}
-    
+
     {% endblock %}
 
 
