--- a/flaskblog/templates/includes/header.html
+++ b/flaskblog/templates/includes/header.html
@@ -6,19 +6,19 @@
                 <i class="fa fa-home"></i>
             </a>
             {% if current_user.is_authenticated %}
-                {% if current_user.roles[0].name == 'Admin' %}
-                    <a class="btn btnM" href="{{ url_for('users.admin') }}">
-                        <i class="fas fa-user"></i>
-                    </a>
-                {% else %}
-                    <a class="btn btnM" id="loginBtnSmall">
-                        <i class="fas fa-user"></i>
-                    </a>
-                {% endif %}
+            {% if current_user.roles[0].name == 'Admin' %}
+            <a class="btn btnM" href="{{ url_for('users.admin') }}">
+                <i class="fas fa-user"></i>
+            </a>
             {% else %}
-                <a class="btn btnM" href="{{ url_for('users.login') }}">
-                        <i class="fas fa-user"></i>
-                </a>
+            <a class="btn btnM" id="loginBtnSmall">
+                <i class="fas fa-user"></i>
+            </a>
+            {% endif %}
+            {% else %}
+            <a class="btn btnM" href="{{ url_for('users.login') }}">
+                <i class="fas fa-user"></i>
+            </a>
             {% endif %}
         </div>
         <a class="btn btnH" id="btnH">
@@ -30,18 +30,18 @@
             <a class="menuBtn" href="{{ url_for('main.reviews') }}">Reviews</a>
             <a class="menuBtn" href="{{ url_for('main.commentary') }}">Commentary</a>
             {% if current_user.is_authenticated %}
-                {% if current_user.roles[0].name == 'Admin' %}
-                    <a id="loginBtn" class="menuBtn" href="{{ url_for('users.admin') }}">{{ current_user.username }}</a>
-                {% else %}
-                    <a id="loginBtn" class="menuBtn">{{ current_user.username }}</a>
-                    <div class="userAccountMenu">
-                        <a çlass="userAccountMenuBtn" href="{{ url_for('users.account') }}">Account Settings</a>
-                        <a çlass="userAccountMenuBtn" href="{{ url_for('user.change_password') }}">Change Password</a>
-                        <a çlass="userAccountMenuBtn" href="{{ url_for('users.logout') }}">Log out</a>
-                    </div>
-                {% endif %}
+            {% if user_has_role(current_user, 'Admin') or user_has_role(current_user, 'Superadmin') %}
+            <a id="loginBtn" class="menuBtn" href="{{ url_for('users.admin') }}">{{ current_user.username }}</a>
             {% else %}
-                <a id="loginBtn" class="menuBtn" href="{{ url_for('users.login') }}">Sign in</a>
+            <a id="loginBtn" class="menuBtn">{{ current_user.username }}</a>
+            <div class="userAccountMenu">
+                <a class="userAccountMenuBtn" href="{{ url_for('users.account') }}">Account Settings</a>
+                <a class="userAccountMenuBtn" href="{{ url_for('user.change_password') }}">Change Password</a>
+                <a class="userAccountMenuBtn" href="{{ url_for('users.logout') }}">Log out</a>
+            </div>
+            {% endif %}
+            {% else %}
+            <a id="loginBtn" class="menuBtn" href="{{ url_for('users.login') }}">Sign in</a>
             {% endif %}
         </div>
     </div>
