--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -1,87 +1,57 @@
-{% extends "base.html" %}
-
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <div class="mainContent">
-    <div class="main">
-        {% for post in posts.items %}
-            {% include 'includes/blogPost.html' %}
-        {% endfor %}
-
-
-
-        <div class="pagination">
-            {% set prev = posts.page - 1 %}
-            {% if prev > 0 %}
-                <a class="pageBtn" href="{{ url_for('main.home', page=prev) }}"><i class="fas fa-chevron-left"></i></a>
-            {% else %}
-                <a class="pageBtn" href="{{ url_for('main.home', page=1) }}"><i class="fas fa-chevron-left"></i></a>
-            {% endif %}
-            {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-                {% if page_num %}
-                    {% if posts.page == page_num %}
-                        <a class="pageBtn currentPageBtn" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
-                    {% else %}
-                        <a class="pageBtn" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
-                    {% endif %}
-                {% else %}
-                    ...
-                {% endif %}
-            {% endfor %}
-            {% set next = posts.page + 1 %}
-            {% if next > posts.pages %}
-                <a class="pageBtn" href="{{ url_for('main.home', page=posts.pages) }}"><i class="fas fa-chevron-right"></i></a>
-            {% else %}
-                <a class="pageBtn" href="{{ url_for('main.home', page=next) }}"><i class="fas fa-chevron-right"></i></a>
-            {% endif %}
-
-        </div>
-
+  <div class="main">
+    <div class="search">
+      <form class="searchForm" method="POST" action="">
+        {{ form.hidden_tag() }} {{ form.search(class="searchInput",
+        placeholder="Search..") }}
+        <button
+          class="searchBtn"
+          id="submit"
+          name="submit"
+          type="submit"></button>
+        <!-- <input class="searchBtn" id="submit" name="submit" type="submit" value="&#xf105"> -->
+      </form>
     </div>
+    {% for post in posts.items %} {% include 'includes/blogPost.html' %} {%
+    endfor %}
 
-    <div class="leftSide">
-        <div class="search">
-            <form class="searchForm" method="POST" action="">
-                {{ form.hidden_tag() }}
-                {{ form.search(class="searchInput", placeholder="Search..") }}
-                <button class="searchBtn" id="submit" name="submit" type="submit"></button>
-                  <!-- <input class="searchBtn" id="submit" name="submit" type="submit" value="&#xf105"> -->
-            </form>
-        </div>
-        <div class="sideDiv">
-            <h5>Test</h5>
-            <p> Ipsum is simply dummy text of the printing and typesetting
-                industry. </p>
-            <button class="sideDivBtn" type="button">Read More</button>
-        </div>
-        <div class="sideDiv">
-            <h5>Test</h5>
-            <p> Ipsum is simply dummy text of the printing and typesetting
-                industry.</p>
-            <button class="sideDivBtn" type="button">Read More</button>
-        </div>
+    <div class="pagination">
+      {% set prev = posts.page - 1 %} {% if prev > 0 %}
+      <a class="pageBtn" href="{{ url_for('main.home', page=prev) }}"
+        ><i class="fas fa-chevron-left"></i
+      ></a>
+      {% else %}
+      <a class="pageBtn" href="{{ url_for('main.home', page=1) }}"
+        ><i class="fas fa-chevron-left"></i
+      ></a>
+      {% endif %} {% for page_num in posts.iter_pages(left_edge=1, right_edge=1,
+      left_current=1, right_current=2) %} {% if page_num %} {% if posts.page ==
+      page_num %}
+      <a
+        class="pageBtn currentPageBtn"
+        href="{{ url_for('main.home', page=page_num) }}"
+        >{{ page_num }}</a
+      >
+      {% else %}
+      <a class="pageBtn" href="{{ url_for('main.home', page=page_num) }}"
+        >{{ page_num }}</a
+      >
+      {% endif %} {% else %} ... {% endif %} {% endfor %} {% set next =
+      posts.page + 1 %} {% if next > posts.pages %}
+      <a class="pageBtn" href="{{ url_for('main.home', page=posts.pages) }}"
+        ><i class="fas fa-chevron-right"></i
+      ></a>
+      {% else %}
+      <a class="pageBtn" href="{{ url_for('main.home', page=next) }}"
+        ><i class="fas fa-chevron-right"></i
+      ></a>
+      {% endif %}
     </div>
+  </div>
 
-    <div class="rightSide">
-       
-        <div class="sideDiv">
-            <h5>{{ news.title }}</h5>
-            <p>{{ news.description }}</p>
-            <button class="sideDivBtn" type="button" onclick="window.location.href='{{ url_for('main.post', slug=news.slug) }}'">Read More</button>
-        </div>
-        <div class="sideDiv">
-            <h5>{{ reviews.title }}</h5>
-            <p>{{ reviews.description }}</p>
-            <button class="sideDivBtn" type="button" onclick="window.location.href='{{ url_for('main.post', slug=reviews.slug) }}'">Read More</button>
-        </div>
-        <div class="sideDiv">
-            <h5>{{ commentary.title }}</h5>
-            <p>{{ commentary.description }}</p>
-            <button class="sideDivBtn" type="button" onclick="window.location.href='{{ url_for('main.post', slug=commentary.slug) }}'">Read More</button>
-        </div>
-    </div>
+  <div class="leftSide"></div>
 </div>
 
-{% include "includes/topBtn.html" %}
-{% endblock %}
+{% include "includes/topBtn.html" %} {% endblock %}
