Cleaning code + deleting all + download logs

--- a/flaskblog/templates/admin/admin-base.html
+++ b/flaskblog/templates/admin/admin-base.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5" />
-    <meta name="author" content="AdminKit" />
+    <meta name="author" content="Ivan Kojic - MPDTech" />
     <meta name="keywords"
         content="adminkit, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web" />
+
+    <link rel="icon" href="{{ url_for('static', filename='css/images/SoFtYTechIcon.ico') }}" type="image/x-icon" />
 
     {% if title %}
     <title>Softy Tech CMS | {{ title }}</title>
