--- a/flaskblog/templates/admin/admin-dashboard.html
+++ b/flaskblog/templates/admin/admin-dashboard.html
@@ -24,7 +24,7 @@
                 <div class="row">
                     <div class="col mt-0">
                         <a class="card-title text-primary text-decoration-none"
-                            href="{{ url_for('users.allUsers') }}">Users</a>
+                            href="{{ url_for('users.all_users') }}">Users</a>
                     </div>
                     <div class="col-auto">
                         <div class="stat bg-black bg-opacity-50">
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="col mt-0">
                         <a class="card-title text-primary text-decoration-none"
-                            href="{{ url_for('posts.allPosts') }}">Posts</a>
+                            href="{{ url_for('posts.all_posts') }}">Posts</a>
                     </div>
                     <div class="col-auto">
                         <div class="stat bg-black bg-opacity-50">
