--- a/flaskblog/templates/admin/admin-includes/admin-sidebar.html
+++ b/flaskblog/templates/admin/admin-includes/admin-sidebar.html
@@ -16,14 +16,14 @@
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="{{ url_for('users.allUsers') }}">
+                <a class="sidebar-link" href="{{ url_for('users.all_users') }}">
                     <i class="align-middle" data-feather="users"></i>
                     <span class="align-middle">All Users</span>
                 </a>
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="{{ url_for('posts.allPosts')}}">
+                <a class="sidebar-link" href="{{ url_for('posts.all_posts')}}">
                     <i class="align-middle" data-feather="file-text"></i>
                     <span class="align-middle">All Posts</span>
                 </a>
