--- a/flaskblog/templates/admin/admin-preview-user.html
+++ b/flaskblog/templates/admin/admin-preview-user.html
@@ -107,8 +107,11 @@
 <div class="row">
     <div class="col-12 col-xxl-9">
         <div class="card rounded-3 bg-dark text-light">
-            <div class="card-header bg-dark">
+            <div class="card-header bg-dark d-flex justify-content-between">
                 <h5 class="card-title mb-0">Posts written by {{ user.username }}</h5>
+                <a class="btn btn-danger" href="{{ url_for('posts.delete_all_posts_by_user', user_id=user.id) }}">
+                    <i class="align-middle me-2" data-feather="trash"></i> Delete All Posts by {{ user.username }}
+                </a>
             </div>
             <div class="card-body">
                 <table class="table table-dark table-hover my-0" id="datatable-posts">
@@ -172,8 +175,11 @@
 <div class="row">
     <div class="col-12 col-xxl-9">
         <div class="card rounded-3 bg-dark text-light">
-            <div class="card-header bg-dark">
+            <div class="card-header bg-dark d-flex justify-content-between">
                 <h5 class="card-title mb-0">Comments written by {{ user.username }}</h5>
+                <a class="btn btn-danger" href="{{ url_for('comments.delete_all_comments_by_user', user_id=user.id) }}">
+                    <i class="align-middle me-2" data-feather="trash"></i> Delete All Comments by {{ user.username }}
+                </a>
             </div>
             <div class="card-body">
                 <table class="table table-dark table-hover my-0" id="datatable-comments">
