--- a/flaskblog/templates/admin/admin-request-logs.html
+++ b/flaskblog/templates/admin/admin-request-logs.html
@@ -13,81 +13,125 @@
     <!-- <div class="col-12 col-lg-8 col-xxl-9 d-flex"> -->
     <div class="col-12">
         <div class="card rounded-3 bg-dark">
-            {% if requestLogs is defined and requestLogs|length > 0 %}
-            <div class="card-header bg-dark">
+            <div class="card-header bg-dark d-flex justify-content-between">
+                {% if requestLogs is defined and requestLogs|length > 0 %}
                 <h5 class="card-title mb-0">List of all logged requests</h5>
+                <div class="d-inline-flex">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Download
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('logs.download_request_logs_json') }}">
+                                    <i class="align-middle me-2" data-feather="file"></i> JSON
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item " href="{{ url_for('logs.download_request_logs_csv') }}">
+                                    <i class="align-middle me-2" data-feather="file"></i> CSV
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <a class="btn btn-danger ms-2" href="{{ url_for('logs.delete_all_request_logs') }}">
+                        <i class="align-middle me-2" data-feather="trash"></i> Delete All Request Logs
+                    </a>
+                </div>
+
+                {% elif errorLogs is defined and errorLogs|length > 0%}
+                <h5 class="card-title mb-0">List of all logged errors</h5>
+                <div class="d-inline-flex">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Download
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('logs.download_error_logs_json') }}">
+                                    <i class="align-middle me-2" data-feather="file"></i> JSON
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item " href="{{ url_for('logs.download_error_logs_csv') }}">
+                                    <i class="align-middle me-2" data-feather="file"></i> CSV
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <a class="btn btn-danger ms-2" href="{{ url_for('logs.delete_all_error_logs') }}">
+                        <i class="align-middle me-2" data-feather="trash"></i> Delete All Error Logs
+                    </a>
+                </div>
+                {% endif %}
+
             </div>
             <div class="card-body">
-                <table class="table table-dark table-hover my-0" id="datatable-requestLogs">
+                <table class="table table-dark table-hover my-0" id="datatable-logs">
+                    {% if requestLogs is defined and requestLogs|length > 0 %}
                     <thead>
                         <tr>
+                            <th>Timestamp</th>
                             <th>Endpoint</th>
                             <th>Method Type</th>
                             <th>User</th>
-                            <th>Timestamp</th>
+
                         </tr>
                     </thead>
                     <tbody>
-
-
                         {% for log in requestLogs %}
                         <tr>
+                            <td>{{ log.timestamp }}</td>
                             <td>{{ log.endpoint }}</td>
                             <td>{{ log.methodType }}</td>
                             <td>{{ log.user.username }}</td>
-                            <td>{{ log.timestamp }}</td>
                         </tr>
                         {% endfor %}
-
                     </tbody>
-                </table>
-                {% elif errorLogs is defined and errorLogs|length > 0%}
-                <div class="card-header bg-dark">
-                    <h5 class="card-title mb-0">List of all logged errors</h5>
-                </div>
-                <div class="card-body">
-                    <table class="table table-dark table-hover my-0" id="datatable-errorLogs">
-                        <thead>
-                            <tr>
-                                <th>Status Code</th>
-                                <th>Endpoint</th>
-                                <th>Method Type</th>
-                                <th>User</th>
-                                <th>Timestamp</th>
-                                <th class="d-none d-md-table-cell">Error Message</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for error in errorLogs %}
-                            <tr>
-                                <td>{{ error.status_code }}</td>
-                                <td>{{ error.endpoint }}</td>
-                                <td>{{ error.methodType }}</td>
-                                <td>{{ error.user.username }}</td>
-                                <td>{{ error.timestamp }}</td>
-                                <td class="d-none d-md-table-cell">{{ error.error_message }}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                    {%endif %}
 
-                </div>
+                    {% elif errorLogs is defined and errorLogs|length > 0 %}
+                    <thead>
+                        <tr>
+                            <th>Timestamp</th>
+                            <th>Status Code</th>
+                            <th>Endpoint</th>
+                            <th>Method Type</th>
+                            <th>User</th>
+                            <th class="d-none d-md-table-cell">Error Message</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for error in errorLogs %}
+                        <tr>
+                            <td>{{ error.timestamp }}</td>
+                            <td>{{ error.status_code }}</td>
+                            <td>{{ error.endpoint }}</td>
+                            <td>{{ error.methodType }}</td>
+                            <td>{{ error.user.username }}</td>
+                            <td class="d-none d-md-table-cell">{{ error.error_message }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                    {% endif %}
+                </table>
             </div>
         </div>
     </div>
+</div>
 
-    <script>
-        // DataTable - Tablica
-        $(document).ready(function () {
-            $("#datatable-requestLogs").DataTable({
-                "order": [[3, "desc"]]
-            });
-            $("#datatable-errorLogs").DataTable({
-                "order": [[4, "desc"]]
-            });
-
-
+<script>
+    // DataTable - Tablica
+    $(document).ready(function () {
+        $("#datatable-logs").DataTable({
+            "order": [[0, "desc"]]
         });
-    </script>
-    {% endblock %}
+
+    });
+</script>
+{% endblock %}
